--- a/panduan.html
+++ b/panduan.html
@@ -11,8 +11,8 @@
     <div class="staticpage-content">
 	    <div class="team-wrapper">      
 		    <div class="team-item" >
-		        <div class="thumb">
-		            <img src="/moodle/theme/caps/pix/ic_virtual tutor.jpg" alt="virtual tutor"/>
+		        <div class="image">
+		            <img src="/moodle/theme/caps/pix/ic_virtual tutor.jpg" alt="virtual tutor"width="500" height="600">
 		        </div>
 		        <div class="details">
                     <ul class="details-list list-inline">
